added the new conductivity tutorial

--- a/docs/cond_tutorial_new.ipynb
+++ b/docs/cond_tutorial_new.ipynb
@@ -41,11 +41,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6478ef72",
+   "id": "0018dcc4",
    "metadata": {},
    "source": [
-    "## Fitting the real part of Conductivity\n",
-    "**The fit function used is Jonscher Power law model**"
+    "## Fitting the real part of Conductivity"
    ]
   },
   {
@@ -120,7 +119,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x_lower_limit -1.0239134603376105 x_upper_limit 5.598708379042977\n"
+      "x_lower_limit -1.039386875850182 x_upper_limit 5.614181794555549\n"
      ]
     }
    ],
@@ -183,10 +182,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "enter the fc value:4\n",
+      "enter the fc value:3\n",
       "enter the DC conductivity value:-10\n",
       "enter the exponent:0.8\n",
-      "dumped_parameters {'fc': 10000.0, 'DC': -10.0, 'n': 0.8}\n"
+      "dumped_parameters {'fc': 1000.0, 'DC': -10.0, 'n': 0.8}\n"
      ]
     },
     {
@@ -217,9 +216,9 @@
      "output_type": "stream",
      "text": [
       "fit parameters:\n",
-      " [274.40493936 -11.04255979   0.97224751]\n",
+      " [274.40483973 -11.04255983   0.97224746]\n",
       " DC cond = -11.043\n",
-      "fit parameters dumped for next iteration {'fc': 274.4049393568742, 'DC': -11.042559790977956, 'n': 0.9722475052577642}\n"
+      "fit parameters dumped for next iteration {'fc': 274.4048397299556, 'DC': -11.04255983252695, 'n': 0.9722474585471939}\n"
      ]
     },
     {
