Changed HN tutorial

--- a/docs/HN_tutorial.ipynb
+++ b/docs/HN_tutorial.ipynb
@@ -81,7 +81,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "d83dbfb3",
+   "id": "f317fcc0",
    "metadata": {},
    "source": [
     "![diel_loss_plot.png](attachment:diel_loss_plot.png)"
@@ -134,7 +134,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "6f48e461",
+   "id": "9d70d6f0",
    "metadata": {},
    "source": [
     "**Plot of the ROI to fit the HN function**\n",
@@ -207,7 +207,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "18257209",
+   "id": "5753715e",
    "metadata": {},
    "source": [
     "**Plot of the initial fit based on the supplied parameters**\n",
@@ -247,7 +247,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "5b449286",
+   "id": "909e4cbf",
    "metadata": {},
    "source": [
     "**Plot of the final fit of the HN function**\n",
@@ -256,8 +256,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "37ab42fa",
+   "cell_type": "raw",
+   "id": "028727c4",
    "metadata": {},
    "source": [
     "**An analysis file has to be created only once during the whole run (i.e. all fit runs can be saved in the same file, unless you change the function or require saving separate processes in separate files.)**"
@@ -385,12 +385,11 @@
     }
    },
    "cell_type": "markdown",
-   "id": "1296e8fa",
+   "id": "ba11a2ab",
    "metadata": {},
    "source": [
-    "**ROI selected for fitting**\n",
-    "\n",
-    "![diel_loss_cond_plot.png](attachment:diel_loss_cond_plot.png)"
+    "![diel_loss_cond_plot.png](attachment:diel_loss_cond_plot.png)**ROI selected for fitting**\n",
+    "\n"
    ]
   },
   {
@@ -459,12 +458,13 @@
     }
    },
    "cell_type": "markdown",
-   "id": "af51443d",
+   "id": "f2d7b08d",
    "metadata": {},
    "source": [
     "**Plot of the initial fit based on the supplied parameters**\n",
     "\n",
-    "![initial_guess_cond.png](attachment:initial_guess_cond.png)"
+    "![initial_guess_cond.png](attachment:initial_guess_cond.png)\n",
+    "\n"
    ]
   },
   {
@@ -499,7 +499,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "a2fd8729",
+   "id": "54aa704e",
    "metadata": {},
    "source": [
     "**Plot of the final fit of the HN function with conductivity**\n",
@@ -642,11 +642,11 @@
     }
    },
    "cell_type": "markdown",
-   "id": "a41b60e5",
+   "id": "8e93a393",
    "metadata": {},
    "source": [
     "**ROI selected for fitting**\n",
-    "![ROI_double%20HN.png](attachment:ROI_double%20HN.png)"
+    "![ROI_double%20HN.png](attachment:ROI_double%20HN.png)\n"
    ]
   },
   {
@@ -719,7 +719,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "6c8ebe43",
+   "id": "4dba9dc4",
    "metadata": {},
    "source": [
     "**Plot of the initial fit based on the supplied parameters**\n",
@@ -759,7 +759,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "fb1d459d",
+   "id": "af1a89fa",
    "metadata": {},
    "source": [
     "**Plot of the final fit of the double HN function**\n",
